k8s/gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: todo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: adilet05/gateway:latest
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: todo-app
spec:
  selector:
    app: gateway
  ports:
    - port: 3000
      targetPort: 3000
