k8s/task-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-service
  namespace: todo-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task-service
  template:
    metadata:
      labels:
        app: task-service
    spec:
      containers:
        - name: task-service
          image: adilet05/task-service:latest
          ports:
            - containerPort: 3003
          readinessProbe:
            httpGet:
              path: /health
              port: 3003
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 3003
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: task-service
  namespace: todo-app
spec:
  selector:
    app: task-service
  ports:
    - port: 3003
      targetPort: 3003
